# dashboard

./: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
app/: container.py  server.py
app/dashboard/: container.py
app/dashboard/application/service/: dashboard.py
app/dashboard/domain/command/: __init__.py
app/dashboard/domain/entity/: dashboard.py
app/dashboard/domain/repository/: dashboard.py
app/dashboard/domain/usecase/: dashboard.py
app/statistic_log/: container.py
app/statistic_log/application/service/: statistic.py
app/statistic_log/domain/command/: __init__.py
app/statistic_log/domain/entity/: statistic.py
app/statistic_log/domain/repository/: statistic.py
app/statistic_log/domain/usecase/: statistic.py
app/user/: __init__.py  container.py
app/user/adapter/: __init__.py
app/user/adapter/input/: __init__.py
app/user/adapter/output/: __init__.py
app/user/application/: __init__.py  dto.py
app/user/application/service/: user.py
app/user/domain/: __init__.py
app/user/domain/command/: __init__.py
app/user/domain/entity/: user.py
app/user/domain/repository/: __init__.py  user.py
core/: config.py
core/db/: __init__.py  clickhouse_db.py  session.py  settings.py
core/db/migration/: init_database.sql
core/fastapi/dependencies/: permission.py
core/fastapi/middlewares/: sqlalchemy.py
core/helpers/cache/: __init__.py
docker/: Dockerfile  docker-compose-dashboard.yml  docker-compose.yml
migrations/: env.py
migrations/versions/: 15197427e55c_update.py  32577f350b45_update_table.py
(+23 files in other folders)
